--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -204,3 +204,12 @@
     opacity: .75;
     color: pink;
 }
+
+@media only screen and (max-width: 500px) {
+ .slick-dots
+{
+        
+	right: 5%;
+	
+}
+}
